--- a/pom.xml
+++ b/pom.xml
@@ -30,4 +30,12 @@
         </dependency>
     </dependencies>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub OWNER Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/flint9ban/serjson</url>
+        </repository>
+    </distributionManagement>
+
 </project>
